test_src/compiler_errors/types/binary/XorBoolError3.b
class XorBoolError3 {
    void test() {
        Int value = 42;
        println(value ^= false);
    }
}
